SimpleComplex/Utils 1.x, 2018-06-17
-----------------------------------
- PathFileListUnique throw FileNonUniqueException to ease identification
  of error; RuntimeException too generic.

SimpleComplex/Utils 1.x, 2018-06-16
-----------------------------------
- PathFileList constructor allow leading dot in requireExtensions.

SimpleComplex/Utils 1.x, 2018-06-14
-----------------------------------
- PathFileList didn't match long extensions exactly.

SimpleComplex/Utils 1.x, 2018-06-03
-----------------------------------
- Explorable toObject() and implement JsonSerializable.
- Time implement JsonSerializable to serialize to ISO-8601 string.
- Release 1.5.0.

SimpleComplex/Utils 1.x, 2018-06-01
-----------------------------------
- Freezables shan't freeze() if costly and already frozen.

SimpleComplex/Utils 1.x, 2018-05-30
-----------------------------------
- Constant time interval class, mending shortcomings of native DateInterval.
  And Time::diffConstant() to create such.

SimpleComplex/Utils 1.x, 2018-05-29
-----------------------------------
- Time class renamed; from DateTimeSimple.

SimpleComplex/Utils 1.x, 2018-05-27
-----------------------------------
- DateTimeSimple override \DateTime::setTime() to support (though ignore)
  $microseconds argument.
- DateTimeSimple::setToDateStart().
- Explorable::explorablesAutoDefine() auto-generates list of explorable
  properties.
- ExplorableGetSetTrait.

SimpleComplex/Utils 1.x, 2018-05-25
-----------------------------------
- Chainable freeze().
- DateTime extension (DateTimeSimple) with Javascript-like getters
  and stringable.

SimpleComplex/Utils 1.x, 2018-05-23
-----------------------------------
- FreezableInterface.
- ExplorableFreezable renamed (from Freezable), supports reserving more
  non-explorable properties, freezes recursively, and unfreezes clone.
- Freezable DateTime extension.

SimpleComplex/Utils 1.x, 2018-05-21
-----------------------------------
- phpunit test helpers.
- Release 1.4.
